hgss-pt-install-guide-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: hgss-pt-install-guide
  name: hgss-pt-install-guide
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hgss-pt-install-guide
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: hgss-pt-install-guide
    spec:
      containers:
        - image: hgss_pt_install_guide:latest
          name: hgss-pt-install-guide
          ports:
            - containerPort: 8080
              protocol: TCP
          tty: true
      restartPolicy: Always
