hgss_pt_install_guide-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: hgss-pt-install-guide
  name: hgss_pt_install_guide
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: hgss-pt-install-guide
